Adding a simple DEBUGGING flag in .env so we can test without actually sending tweets.

--- a/code/mof-bot/src/.env.sample
+++ b/code/mof-bot/src/.env.sample
@@ -8,3 +8,13 @@
 # OPENAI_API_MODEL can be used instead
 OPENAI_API_KEY=
 LLM_MODEL=gpt-4o 
+
+# X/Twitter API
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
+TWITTER_BEARER_TOKEN=
+ACCESS_TOKEN_SENDER=
+ACCESS_TOKEN_SECRET_SENDER=
+
+# OPTIONS
+DEBUGGING=0
