--- a/code/mof-bot/src/.env.sample
+++ b/code/mof-bot/src/.env.sample
@@ -13,6 +13,8 @@ LLM_MODEL=gpt-4o
 TWITTER_API_KEY=
 TWITTER_API_SECRET=
 TWITTER_BEARER_TOKEN=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_SENDER=
 ACCESS_TOKEN_SECRET_SENDER=
 
