--- a/code/prologue/package.json
+++ b/code/prologue/package.json
@@ -8,7 +8,9 @@
     "prettier-check": "prettier --check .",
     "lint": "pnpm exec eslint .",
     "test": "pnpm exec vitest run",
-    "dev": "pnpm build && node dist/index.js"
+    "dev": "pnpm build && node dist/index.js",
+    "check": "tsc",
+    "db:push": "drizzle-kit push"
   },
   "keywords": [],
   "author": "",
@@ -17,22 +19,43 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.15.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/express": "4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/node": "^22.10.6",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.12.0",
     "husky": "^8.0.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "tslog": "^4.9.3",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.15.0",
+    "vite": "^6.0.7",
     "vitest": "^2.1.5"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "nanoid": "^5.0.9",
     "optional": "^0.1.4",
-    "sharp": "^0.33.5"
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "ws": "^8.18.0",
+    "zod": "^3.23.8"
   }
 }
