--- a/code/prologue/tsconfig.json
+++ b/code/prologue/tsconfig.json
@@ -1,25 +1,34 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "lib": ["ESNext", "dom"],
-    "moduleResolution": "Bundler",
-    "outDir": "./dist",
-    "rootDir": ".",
-    "strict": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowImportingTsExtensions": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "resolveJsonModule": true,
-    "noImplicitAny": false,
-    "allowJs": true,
-    "checkJs": false,
-    "noEmitOnError": false,
-    "moduleDetection": "force",
-    "allowArbitraryExtensions": true,
-    "types": ["@typescript-eslint/eslint-plugin"]
-  }
+    "target": "ESNext", 
+    "module": "ESNext", 
+    "lib": ["ESNext", "dom", "dom.iterable"], 
+    "moduleResolution": "Bundler", 
+    "outDir": "./dist", 
+    "rootDir": ".", 
+    "strict": true, 
+    "esModuleInterop": true, 
+    "skipLibCheck": true, 
+    "forceConsistentCasingInFileNames": true, 
+    "allowImportingTsExtensions": true, 
+    "resolveJsonModule": true, 
+    "declaration": true, 
+    "emitDeclarationOnly": true, 
+    "allowJs": true, 
+    "checkJs": false, 
+    "noEmitOnError": false, 
+    "jsx": "preserve", 
+    "baseUrl": ".", 
+    "paths": {
+      "@/*": ["./client/src/*"] 
+    },
+    "incremental": true, 
+    "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo", 
+    "types": ["node", "vite/client"], 
+    "moduleDetection": "force", 
+    "noImplicitAny": false, 
+    "allowArbitraryExtensions": true
+  },
+  "include": ["client/src/**/*", "server/**/*"],
+  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"] 
 }
