refactor: client & server workgroups, animated 404 page

--- a/code/prologue/tsconfig.json
+++ b/code/prologue/tsconfig.json
@@ -1,34 +1,31 @@
 {
   "compilerOptions": {
-    "target": "ESNext", 
-    "module": "ESNext", 
-    "lib": ["ESNext", "dom", "dom.iterable"], 
-    "moduleResolution": "Bundler", 
-    "outDir": "./dist", 
-    "rootDir": ".", 
-    "strict": true, 
-    "esModuleInterop": true, 
-    "skipLibCheck": true, 
-    "forceConsistentCasingInFileNames": true, 
-    "allowImportingTsExtensions": true, 
-    "resolveJsonModule": true, 
-    "declaration": true, 
-    "emitDeclarationOnly": true, 
-    "allowJs": true, 
-    "checkJs": false, 
-    "noEmitOnError": false, 
-    "jsx": "preserve", 
-    "baseUrl": ".", 
+    "target": "ESNext",
+    "module": "ESNext",
+    "lib": ["ESNext", "dom", "dom.iterable"],
+    "moduleResolution": "Bundler",
+    "outDir": "./dist",
+    "rootDir": ".",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "allowJs": true,
+    "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./client/src/*"] 
+      "@/*": ["./client/src/*"]
     },
-    "incremental": true, 
-    "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo", 
-    "types": ["node", "vite/client"], 
-    "moduleDetection": "force", 
-    "noImplicitAny": false, 
+    "incremental": true,
+    "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
+    "types": ["node"],
+    "moduleDetection": "force",
     "allowArbitraryExtensions": true
   },
   "include": ["client/src/**/*", "server/**/*"],
-  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"] 
+  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"]
 }
