--- a/code/prologue/package.json
+++ b/code/prologue/package.json
@@ -2,15 +2,19 @@
   "name": "prologue",
   "version": "0.1.0",
   "description": "A full screen web experience for AI agent interactions.",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "exports": "./dist/index.js",
   "scripts": {
+    "dev:client": "next dev ./client",
+    "build:client": "next build ./client",
+    "start:client": "next start ./client",
+    "dev:server": "ts-node ./server/index.ts",
+    "build:server": "tsc --project ./server/tsconfig.json",
+    "start:server": "node ./server/dist/index.js",
+    "dev": "concurrently \"pnpm run dev:client\" \"pnpm run dev:server\"",
     "build": "bash ./scripts/build.sh",
-    "prettier-check": "prettier --check .",
-    "lint": "pnpm exec eslint .",
-    "test": "pnpm exec vitest run",
-    "dev": "pnpm build && node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "start": "concurrently \"pnpm run start:client\" \"pnpm run start:server\""
   },
   "keywords": [],
   "author": "",
@@ -30,26 +34,23 @@
     "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.12.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.14",
     "tslog": "^4.9.3",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.7",
-    "vitest": "^2.1.5"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "nanoid": "^5.0.9",
+    "next": "^15.1.5",
     "optional": "^0.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
