--- a/code/prologue/client/package.json
+++ b/code/prologue/client/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babylonjs/core": "^7.44.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.1",
