fixes/docs: proved a strategy for cyclic learning pattern on 2 token 2 cw

--- a/code/fl/data/.gitignore
+++ b/code/fl/data/.gitignore
@@ -6,5 +6,5 @@
 !README.md
 !sample-train.txt
 !sample-val.txt
-!capitalize_a_2cw-train.txt
-!capitalize_a_2cw-val.txt
+!cycle_2t_2cw-train.txt
+!cycle_2t_2cw-val.txt
