--- a/code/fl/data/.gitignore
+++ b/code/fl/data/.gitignore
@@ -9,3 +9,6 @@
 !cycle_2t_2cw-train.txt
 !cycle_2t_2cw-val.txt
 !cycle_2t_2cw-test.txt
+!cycle_4t_2cw-train.txt
+!cycle_4t_2cw-val.txt
+!cycle_4t_2cw-test.txt
