[docs+results]: 8 active tokens, 2 token context window

--- a/code/fl/data/.gitignore
+++ b/code/fl/data/.gitignore
@@ -12,3 +12,6 @@
 !cycle_4t_2cw-train.txt
 !cycle_4t_2cw-val.txt
 !cycle_4t_2cw-test.txt
+!cycle_8t_2cw-train.txt
+!cycle_8t_2cw-val.txt
+!cycle_8t_2cw-test.txt
