[docs+results]: 16 active tokens, 2 token context window

--- a/code/fl/data/.gitignore
+++ b/code/fl/data/.gitignore
@@ -15,3 +15,6 @@
 !cycle_8t_2cw-train.txt
 !cycle_8t_2cw-val.txt
 !cycle_8t_2cw-test.txt
+!cycle_16t_2cw-train.txt
+!cycle_16t_2cw-val.txt
+!cycle_16t_2cw-test.txt
