--- a/code/fl/data/.gitignore
+++ b/code/fl/data/.gitignore
@@ -18,3 +18,6 @@
 !cycle_16t_2cw-train.txt
 !cycle_16t_2cw-val.txt
 !cycle_16t_2cw-test.txt
+!cycle_32t_2cw-train.txt
+!cycle_32t_2cw-val.txt
+!cycle_32t_2cw-test.txt
